--- a/compose/jdownloader-2/compose.yml
+++ b/compose/jdownloader-2/compose.yml
@@ -2,15 +2,18 @@ services:
   jdownloader-2:
     container_name: jdownloader-2
     environment:
-    - SECURE_CONNECTION=${VNC_SECURE_CONNECTION}
-    - VNC_PASSWORD=${VNC_PASSWORD}
-    - ENABLE_CJK_FONT=1
+      - PUID=${UID:-1000}
+      - PGID=${GID:-1000}
+      - TZ=${TIMEZONE}
+      - SECURE_CONNECTION=${VNC_SECURE_CONNECTION}
+      - VNC_PASSWORD=${VNC_PASSWORD}
+      - ENABLE_CJK_FONT=1
     image: jlesage/jdownloader-2
     ports:
-    - 1500:5800
-    - 1501:5900
+      - 1500:5800
+      - 1501:5900
     restart: unless-stopped
     volumes:
-    - ../../data/jdownloader-2/config:/config:rw
-    - ${JDOWNLOADER_FOLDER}:/output:rw
-    - ${JDOWNLOADER_FOLDER}:${JDOWNLOADER_FOLDER}:rw
+      - ../../data/jdownloader-2/config:/config:rw
+      - ${JDOWNLOADER_FOLDER}:/output:rw
+      - ${JDOWNLOADER_FOLDER}:${JDOWNLOADER_FOLDER}:rw
