--- a/compose/czkawka/compose.yml
+++ b/compose/czkawka/compose.yml
@@ -1,6 +1,5 @@
 services:
   czkawka:
-    #container_name: czkawka_deploy1
     restart: always
     environment:
       - PUID=${UID:-1000}
@@ -14,9 +13,19 @@ services:
       - 1601-1603:5800
     volumes:
       - ../../data/czkawka/config/results_similar_videos_pretty.json:/config/results_similar_videos_pretty.json:rw
+      - ../../data/czkawka/config/results_similar_images_pretty.json:/config/results_similar_images_pretty.json:rw
       - ../../data/czkawka/cache:/config/xdg/cache:rw
       - /mnt:/mnt:rw
     deploy:
       mode: replicated
       replicas: 3
-networks: {}
+    networks:
+      - default
+      - traefik-proxy
+
+networks:
+  default:
+    name: media_server
+    external: true
+  traefik-proxy:
+    external: true
