--- a/compose/dockge/compose.yaml
+++ b/compose/dockge/compose.yaml
@@ -2,7 +2,10 @@ services:
   dockge:
     container_name: dockge
     image: louislam/dockge:1
-    
+    user: 1000:1000
+    group_add:
+      - '999'
+      
     restart: unless-stopped
     ports:
       - 5001:5001
