--- a/compose/calibre-web/compose.yaml
+++ b/compose/calibre-web/compose.yaml
@@ -3,14 +3,21 @@ services:
     image: lscr.io/linuxserver/calibre-web:latest
     container_name: calibre-web
     environment:
-      - PUID=1000
-      - PGID=1000
+      - PUID=${UID:-1000}
+      - PGID=${UID:-1000}
       - TZ=${TIMEZONE}
-      - DOCKER_MODS=linuxserver/mods:universal-calibre #optional
-      - OAUTHLIB_RELAX_TOKEN_SCOPE=1 #optional
+      - DOCKER_MODS=linuxserver/mods:universal-calibre 
+      - OAUTHLIB_RELAX_TOKEN_SCOPE=1
     volumes:
       - ../../data/calibre-web/config:/config
-      - /mnt/DATA/books:/books
+      - ${DATA}/books:/books
     ports:
       - 8083:8083
     restart: unless-stopped
+    networks:
+      - default
+      - traefik-proxy
+      
+networks:
+  traefik-proxy:
+    external: true
