--- a/compose/photoprism/compose.yaml
+++ b/compose/photoprism/compose.yaml
@@ -14,6 +14,8 @@ services:
       PUID: ${UID:-1000}
       PGID: ${GID:-1000}
       TZ: ${TIMEZONE}
+      PHOTOPRISM_UID: ${UID:-1000}
+      PHOTOPRISM_GID: ${GID:-1000}
       PHOTOPRISM_ADMIN_USER: usuario
       PHOTOPRISM_ADMIN_PASSWORD: ${PASSWORD}
       PHOTOPRISM_AUTH_MODE: password
@@ -50,14 +52,10 @@ services:
       PHOTOPRISM_FFMPEG_ENCODER: "intel"        
       PHOTOPRISM_FFMPEG_SIZE: "1920"              
       PHOTOPRISM_FFMPEG_BITRATE: "32"             
-      ## Run as a non-root user after initialization (supported: 0, 33, 50-99, 500-600, and 900-1200):
-      PHOTOPRISM_UID: ${UID:-1000}
-      PHOTOPRISM_GID: ${GID:-1000}
     devices:
       - /dev/dri:/dev/dri
     working_dir: /photoprism 
     volumes:
-      - ${DATA}/YK_local:/photoprism/originals/YK_local:ro
-      - ${DATA}/thumbs:/photoprism/originals/thumbs:ro
+      - ${DATA}/${FOLDER_1}:/photoprism/originals/${FOLDER_1}:ro
       - ../../data/photoprism/storage:/photoprism/storage
 networks: {}
