--- a/compose/traefik/compose.yaml
+++ b/compose/traefik/compose.yaml
@@ -12,7 +12,7 @@ services:
   whoami:
     image: traefik/whoami
     labels:
-      - traefik.http.routers.whoami.rule=Host(`whoami.${SERVER_DOMAIN}`)
+      - traefik.http.routers.whoami.rule=Path(`/whoami`)
 networks:
   default:
     name: traefik-proxy
