--- a/compose/traefik/compose.yaml
+++ b/compose/traefik/compose.yaml
@@ -1,6 +1,5 @@
-version: "3"
 services:
-  reverse-proxy:
+  traefik:
     image: traefik:v3.1
     container_name: traefik
     command: --api.insecure=true --providers.docker --providers.docker.exposedbydefault=false
