--- a/compose/traefik/compose.yaml
+++ b/compose/traefik/compose.yaml
@@ -11,6 +11,7 @@ services:
   whoami:
     image: traefik/whoami
     labels:
+      - traefik.enable=true
       - traefik.http.routers.whoami.rule=Path(`/whoami`)
 networks:
   default:
